--- a/Poker_Client/View/MainWindow.xaml
+++ b/Poker_Client/View/MainWindow.xaml
@@ -7,6 +7,7 @@
         xmlns:ViewModel="clr-namespace:Poker_Client.ViewModel" x:Class="Poker_Client.View.MainWindow"
         mc:Ignorable="d"
         Title="MainWindow" Height="600" Width="1000">
+
     <Window.DataContext>
         <ViewModel:MainWindowViewModel/>
     </Window.DataContext>
@@ -16,7 +17,11 @@
         <Button Content="{Binding BtnName}" HorizontalAlignment="Left" Margin="287,23,0,0" VerticalAlignment="Top" Width="121" Height="28" Command="{Binding BtnConnectCommand}" CommandParameter="{Binding Content, RelativeSource={RelativeSource self}}"/>
         <Button HorizontalAlignment="Left" Margin="427,24,0,0" VerticalAlignment="Top" Width="27" Height="27" Background="{Binding BtnColor}" IsTabStop="False"/>
         <ListBox HorizontalAlignment="Left" Margin="543,0,0,69" Width="293" ItemsSource="{Binding ChatList}" Height="427" VerticalAlignment="Bottom"/>
-        <TextBox HorizontalAlignment="Left" Height="23" Margin="543,0,0,27" TextWrapping="Wrap" VerticalAlignment="Bottom" Width="293" Text="{Binding Message}" IsEnabled="{Binding Enabled}"/>
+        <TextBox HorizontalAlignment="Left" Height="23" Margin="543,0,0,27" TextWrapping="Wrap" VerticalAlignment="Bottom" Width="293" Text="{Binding Message}" IsEnabled="{Binding Enabled}">
+            <TextBox.InputBindings>
+                <KeyBinding Command="{Binding BtnSend}" Key="Space" />
+            </TextBox.InputBindings>
+        </TextBox>
         <Button Content="Enviar" Margin="852,0,27,27" VerticalAlignment="Bottom" Height="23" Command="{Binding BtnSend}" IsEnabled="{Binding Enabled}"/>
         <DataGrid Margin="852,73,0,69" ItemsSource="{Binding Usuaris}" AutoGenerateColumns="False" SelectedItem="{Binding UsrSendList}" HorizontalAlignment="Left" Width="113">
             <DataGrid.Columns>
@@ -24,10 +29,10 @@
             </DataGrid.Columns>
         </DataGrid>
         <Label Content="{Binding TestCarta}" HorizontalAlignment="Left" Margin="31,330,0,0" VerticalAlignment="Top" FontSize="130" Height="170" Foreground="{Binding ColorCarta}"/>
-        <Label Content="{Binding TestCarta}" HorizontalAlignment="Left" Margin="131,330,0,0" VerticalAlignment="Top" FontSize="130" Height="170" Foreground="{Binding ColorCarta}"/>
-        <Label Content="{Binding TestCarta}" HorizontalAlignment="Left" Margin="231,330,0,0" VerticalAlignment="Top" FontSize="130" Height="170" Foreground="{Binding ColorCarta}"/>
-        <Label Content="{Binding TestCarta}" HorizontalAlignment="Left" Margin="331,330,0,0" VerticalAlignment="Top" FontSize="130" Height="170" Foreground="{Binding ColorCarta}"/>
-        <Label Content="{Binding TestCarta}" HorizontalAlignment="Left" Margin="431,330,0,0" VerticalAlignment="Top" FontSize="130" Height="170" Foreground="{Binding ColorCarta}"/>
+        <Label Content="{Binding TestCarta1}" HorizontalAlignment="Left" Margin="131,330,0,0" VerticalAlignment="Top" FontSize="130" Height="170" Foreground="{Binding ColorCarta}"/>
+        <Label Content="{Binding TestCarta2}" HorizontalAlignment="Left" Margin="231,330,0,0" VerticalAlignment="Top" FontSize="130" Height="170" Foreground="{Binding ColorCarta}"/>
+        <Label Content="{Binding TestCarta3}" HorizontalAlignment="Left" Margin="331,330,0,0" VerticalAlignment="Top" FontSize="130" Height="170" Foreground="{Binding ColorCarta}"/>
+        <Label Content="{Binding TestCarta4}" HorizontalAlignment="Left" Margin="431,330,0,0" VerticalAlignment="Top" FontSize="130" Height="170" Foreground="{Binding ColorCarta}"/>
         <Button Content="{Binding TestCarta}" HorizontalAlignment="Left" Margin="212,73,0,0" VerticalAlignment="Top" Width="141" Height="252" Background="White" BorderBrush="White" FontSize="200" Foreground="{Binding ColorCarta}"/>
     </Grid>
 </Window>
