--- a/Poker_Client/View/MainWindow.xaml
+++ b/Poker_Client/View/MainWindow.xaml
@@ -34,6 +34,6 @@
         <Label Content="{Binding Carta3.valor}" HorizontalAlignment="Left" Margin="231,330,0,0" VerticalAlignment="Top" FontSize="130" Height="170" Foreground="{Binding Carta3.color}"/>
         <Label Content="{Binding Carta4.valor}" HorizontalAlignment="Left" Margin="331,330,0,0" VerticalAlignment="Top" FontSize="130" Height="170" Foreground="{Binding Carta4.color}"/>
         <Label Content="{Binding Carta5.valor}" HorizontalAlignment="Left" Margin="431,330,0,0" VerticalAlignment="Top" FontSize="130" Height="170" Foreground="{Binding Carta5.color}"/>
-        <Button Content="{Binding Carta.valor}" HorizontalAlignment="Left" Margin="212,73,0,0" VerticalAlignment="Top" Width="141" Height="252" Background="White" BorderBrush="White" FontSize="200" Foreground="{Binding Carta.color}"/>
+        <Button Content="{Binding Carta.valor}" IsEnabled="{Binding isNotFull}" HorizontalAlignment="Left" Margin="212,73,0,0" VerticalAlignment="Top" Width="141" Height="252" Background="White" BorderBrush="White" FontSize="200" Command="{Binding BtnGetCard}" Foreground="{Binding Carta.color}"/>
     </Grid>
 </Window>
