--- a/Poker_Client/View/MainWindow.xaml
+++ b/Poker_Client/View/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:Poker_Client"
         xmlns:ViewModel="clr-namespace:Poker_Client.ViewModel" x:Class="Poker_Client.View.MainWindow"
         mc:Ignorable="d"
-        Title="MainWindow" Height="600" Width="1000">
+        Title="MainWindow" Height="600" Width="1000" MinHeight="600" MinWidth="1000">
 
     <Window.DataContext>
         <ViewModel:MainWindowViewModel/>
@@ -16,15 +16,15 @@
         <TextBox HorizontalAlignment="Left" Height="27" Margin="87,24,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="182" Text="{Binding Nom}"/>
         <Button Content="{Binding BtnName}" HorizontalAlignment="Left" Margin="287,23,0,0" VerticalAlignment="Top" Width="121" Height="28" Command="{Binding BtnConnectCommand}" CommandParameter="{Binding Content, RelativeSource={RelativeSource self}}"/>
         <Button HorizontalAlignment="Left" Margin="427,24,0,0" VerticalAlignment="Top" Width="27" Height="27" Background="{Binding BtnColor}" IsTabStop="False"/>
-        <ListBox HorizontalAlignment="Left" Margin="543,0,0,69" Width="293" ItemsSource="{Binding ChatList}" Height="427" VerticalAlignment="Bottom"/>
-        <TextBox HorizontalAlignment="Left" Height="23" Margin="543,0,0,27" TextWrapping="Wrap" VerticalAlignment="Bottom" Width="293" Text="{Binding Message, UpdateSourceTrigger=PropertyChanged}" IsEnabled="{Binding Enabled}">
+        <ListBox Margin="0,74,157.6,69.4" ItemsSource="{Binding ChatList}" HorizontalAlignment="Right" Width="293"/>
+        <TextBox Height="23" Margin="0,0,157.6,27.4" TextWrapping="Wrap" VerticalAlignment="Bottom" Text="{Binding Message, UpdateSourceTrigger=PropertyChanged}" IsEnabled="{Binding Enabled}" HorizontalAlignment="Right" Width="293">
             <TextBox.InputBindings>
                 <KeyBinding Command="{Binding BtnSend}" Key="Return"/>
             </TextBox.InputBindings>
-            
+
         </TextBox>
-        <Button Content="Enviar" Margin="852,0,27,27" VerticalAlignment="Bottom" Height="23" Command="{Binding BtnSend}" IsEnabled="{Binding Enabled}"/>
-        <DataGrid Margin="852,73,0,69" ItemsSource="{Binding Usuaris}" AutoGenerateColumns="False" SelectedItem="{Binding UsrSendList}" HorizontalAlignment="Left" Width="113">
+        <Button Content="Enviar" Margin="0,0,26.6,27.4" Command="{Binding BtnSend}" IsEnabled="{Binding Enabled}" Height="23" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="115"/>
+        <DataGrid Margin="0,73,28.6,69.4" ItemsSource="{Binding Usuaris}" AutoGenerateColumns="False" SelectedItem="{Binding UsrSendList}" HorizontalAlignment="Right" Width="113">
             <DataGrid.Columns>
                 <DataGridTextColumn Binding="{Binding Mode=OneWay}" ClipboardContentBinding="{x:Null}" Width="111" Header="Usuaris connectats" IsReadOnly="True"/>
             </DataGrid.Columns>
