--- a/Poker_Client/View/MainWindow.xaml
+++ b/Poker_Client/View/MainWindow.xaml
@@ -6,35 +6,93 @@
         xmlns:local="clr-namespace:Poker_Client"
         xmlns:ViewModel="clr-namespace:Poker_Client.ViewModel" x:Class="Poker_Client.View.MainWindow"
         mc:Ignorable="d"
-        Title="MainWindow" Height="600" Width="1000" MinHeight="600" MinWidth="1000">
+        Title="MainWindow" Height="639" Width="1053" MinHeight="600" MinWidth="1000">
 
     <Window.DataContext>
         <ViewModel:MainWindowViewModel/>
     </Window.DataContext>
-    <Grid>
+    <Grid Margin="0,0,-8,0">
+        <Grid.Background>
+            <LinearGradientBrush EndPoint="0.5,1" MappingMode="RelativeToBoundingBox" StartPoint="0.5,0">
+                <GradientStop Color="#CC82F4B1"/>
+                <GradientStop Color="#CC30C660" Offset="1"/>
+            </LinearGradientBrush>
+        </Grid.Background>
         <Label Content="Nom:" HorizontalAlignment="Left" Margin="43,24,0,0" VerticalAlignment="Top"/>
         <TextBox HorizontalAlignment="Left" Height="27" Margin="87,24,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="182" Text="{Binding Nom}"/>
-        <Button Content="{Binding BtnName}" HorizontalAlignment="Left" Margin="287,23,0,0" VerticalAlignment="Top" Width="121" Height="28" Command="{Binding BtnConnectCommand}" CommandParameter="{Binding Content, RelativeSource={RelativeSource self}}"/>
-        <Button HorizontalAlignment="Left" Margin="427,24,0,0" VerticalAlignment="Top" Width="27" Height="27" Background="{Binding BtnColor}" IsTabStop="False"/>
-        <ListBox Margin="0,74,157.6,69.4" ItemsSource="{Binding ChatList}"  HorizontalAlignment="Right" Width="293"/>
-        <TextBox Height="23" Margin="0,0,157.6,27.4" TextWrapping="Wrap" VerticalAlignment="Bottom" Text="{Binding Message, UpdateSourceTrigger=PropertyChanged}" IsEnabled="{Binding Enabled}" HorizontalAlignment="Right" Width="293">
+        <Button Content="{Binding BtnName}" HorizontalAlignment="Left" Margin="287,23,0,0" VerticalAlignment="Top" Width="109" Height="28" Command="{Binding BtnConnectCommand}" CommandParameter="{Binding Content, RelativeSource={RelativeSource self}}"/>
+        <Button HorizontalAlignment="Left" Margin="413,24,0,0" VerticalAlignment="Top" Width="27" Height="27" Background="{Binding BtnColor}" IsTabStop="False"/>
+        <ListBox Margin="0,74,158,69" ItemsSource="{Binding ChatList}"  HorizontalAlignment="Right" Width="281">
+            <ListBox.Background>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="#FFF1E1C2" Offset="0.506"/>
+                    <GradientStop Color="#FFF6D5F7" Offset="1"/>
+                    <GradientStop Color="#FFF0E5D1"/>
+                </LinearGradientBrush>
+            </ListBox.Background>
+        </ListBox>
+        <TextBox Height="23" Margin="0,0,158,27" TextWrapping="Wrap" VerticalAlignment="Bottom" Text="{Binding Message, UpdateSourceTrigger=PropertyChanged}" IsEnabled="{Binding Enabled}" HorizontalAlignment="Right" Width="281" Background="#CCF8C7F9">
             <TextBox.InputBindings>
                 <KeyBinding Command="{Binding BtnSend}" Key="Return"/>
             </TextBox.InputBindings>
 
         </TextBox>
-        <Button Content="Enviar" Margin="0,0,26.6,27.4" Command="{Binding BtnSend}" IsEnabled="{Binding Enabled}" Height="23" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="115"/>
-        <DataGrid Margin="0,73,27,97" ItemsSource="{Binding Usuaris}" AutoGenerateColumns="False" SelectedItem="{Binding UsrSendList}" HorizontalAlignment="Right" Width="115">
+        <Button Content="Enviar" Margin="0,0,26.6,27.4" Command="{Binding BtnSend}" IsEnabled="{Binding Enabled}" Height="23" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="115" Background="#CCF9A0FB"/>
+        <DataGrid Margin="0,73,27,69" ItemsSource="{Binding Usuaris}" AutoGenerateColumns="False" SelectedItem="{Binding UsrSendList}" HorizontalAlignment="Right" Width="115">
+            <DataGrid.Background>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="#FFF1E1C2" Offset="0.439"/>
+                    <GradientStop Color="#FFF6D5F7" Offset="0.987"/>
+                    <GradientStop Color="#FFF0E5D1" Offset="0.067"/>
+                </LinearGradientBrush>
+            </DataGrid.Background>
             <DataGrid.Columns>
                 <DataGridTextColumn Binding="{Binding Mode=OneWay}" ClipboardContentBinding="{x:Null}" Width="111" Header="Usuaris connectats" IsReadOnly="True"/>
             </DataGrid.Columns>
         </DataGrid>
-        <Label Content="{Binding Carta1.valor}" HorizontalAlignment="Left" Margin="31,330,0,0" VerticalAlignment="Top" FontSize="130" Height="170" Foreground="{Binding Carta1.color}" />
-        <Label Content="{Binding Carta2.valor}" HorizontalAlignment="Left" Margin="131,330,0,0" VerticalAlignment="Top" FontSize="130" Height="170" Foreground="{Binding Carta2.color}"/>
-        <Label Content="{Binding Carta3.valor}" HorizontalAlignment="Left" Margin="231,330,0,0" VerticalAlignment="Top" FontSize="130" Height="170" Foreground="{Binding Carta3.color}"/>
-        <Label Content="{Binding Carta4.valor}" HorizontalAlignment="Left" Margin="331,330,0,0" VerticalAlignment="Top" FontSize="130" Height="170" Foreground="{Binding Carta4.color}"/>
-        <Label Content="{Binding Carta5.valor}" HorizontalAlignment="Left" Margin="431,330,0,0" VerticalAlignment="Top" FontSize="130" Height="170" Foreground="{Binding Carta5.color}"/>
-        <Button Content="{Binding Carta.valor}" IsEnabled="{Binding isNotFull}" HorizontalAlignment="Left" Margin="212,86,0,0" VerticalAlignment="Top" Width="170" Height="258" Background="Transparent" BorderBrush="White" FontSize="200" Command="{Binding BtnGetCard}" Foreground="{Binding Carta.color}" Style="{DynamicResource ButtonStyle1}" />
-        <Button Content="Start" Margin="0,0,27,69" Command="{Binding BtnStart}" IsEnabled="{Binding Enabled}" BorderBrush="{Binding BtnColor}" Height="23" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="115"/>
+        <Rectangle Fill="#33F4F4F5" HorizontalAlignment="Left" Height="507" Margin="30,74,0,0" Stroke="#33000000" VerticalAlignment="Top" Width="532"/>
+        <Label Content="{Binding Carta1.valor}" HorizontalAlignment="Left" Margin="53,395,0,0" VerticalAlignment="Top" FontSize="130" Height="170" Foreground="{Binding Carta1.color}" BorderBrush="#FF060606" BorderThickness="1" Background="#663E7A54" RenderTransformOrigin="0.5,0.5" >
+            <Label.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="-9"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Label.RenderTransform>
+        </Label>
+        <Label Content="{Binding Carta2.valor}" HorizontalAlignment="Left" Margin="152,374,0,0" VerticalAlignment="Top" FontSize="130" Height="170" Foreground="{Binding Carta2.color}" BorderThickness="1" BorderBrush="Black" Background="#663E7A54" RenderTransformOrigin="0.5,0.5">
+            <Label.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="-3"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Label.RenderTransform>
+        </Label>
+        <Label Content="{Binding Carta3.valor}" HorizontalAlignment="Left" Margin="251,363,0,0" VerticalAlignment="Top" FontSize="130" Height="170" Foreground="{Binding Carta3.color}" BorderThickness="1" BorderBrush="Black" Background="#663E7A54"/>
+        <Label Content="{Binding Carta4.valor}" HorizontalAlignment="Left" Margin="350,374,0,0" VerticalAlignment="Top" FontSize="130" Height="170" Foreground="{Binding Carta4.color}" BorderThickness="1" BorderBrush="Black" Background="#663E7A54" RenderTransformOrigin="0.5,0.5">
+            <Label.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="3"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Label.RenderTransform>
+        </Label>
+        <Label Content="{Binding Carta5.valor}" HorizontalAlignment="Left" Margin="449,395,0,0" VerticalAlignment="Top" FontSize="130" Height="170" Foreground="{Binding Carta5.color}" BorderThickness="1" BorderBrush="Black" Background="#663E7A54" RenderTransformOrigin="0.5,0.5">
+            <Label.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="9"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Label.RenderTransform>
+        </Label>
+        <Button Content="{Binding Carta.valor}" IsEnabled="{Binding isNotFull}" HorizontalAlignment="Left" Margin="209,90,0,0" VerticalAlignment="Top" Width="170" Height="252" Background="Transparent" BorderBrush="White" FontSize="200" Command="{Binding BtnGetCard}" Foreground="{Binding Carta.color}" Style="{DynamicResource ButtonStyle1}" />
+        <Button Content="Start" Margin="0,0,891,474" Command="{Binding BtnStart}" IsEnabled="{Binding Enabled}" BorderBrush="{Binding BtnColor}" Height="26" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="100" Background="#FF74F966"/>
     </Grid>
 </Window>
