--- a/Poker_Client/View/MainWindow.xaml
+++ b/Poker_Client/View/MainWindow.xaml
@@ -13,10 +13,7 @@
     </Window.DataContext>
     <Grid Margin="0,0,-8,0">
         <Grid.Background>
-            <LinearGradientBrush EndPoint="0.5,1" MappingMode="RelativeToBoundingBox" StartPoint="0.5,0">
-                <GradientStop Color="#CC82F4B1"/>
-                <GradientStop Color="#CC30C660" Offset="1"/>
-            </LinearGradientBrush>
+            <ImageBrush ImageSource="poker-table-texture.jpg" Stretch="None" TileMode="Tile" ViewportUnits="Absolute" Viewport="0,0,450,300"/>
         </Grid.Background>
         <Label Content="Nom:" HorizontalAlignment="Left" Margin="43,24,0,0" VerticalAlignment="Top"/>
         <TextBox HorizontalAlignment="Left" Height="27" Margin="87,24,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="182" Text="{Binding Nom}"/>
