--- a/Poker_Client/View/MainWindow.xaml
+++ b/Poker_Client/View/MainWindow.xaml
@@ -15,8 +15,8 @@
         <Grid.Background>
             <ImageBrush ImageSource="poker-table-texture.jpg" Stretch="None" TileMode="Tile" ViewportUnits="Absolute" Viewport="0,0,450,300"/>
         </Grid.Background>
-        <Label Content="Nom:" HorizontalAlignment="Left" Margin="43,24,0,0" VerticalAlignment="Top"/>
-        <TextBox HorizontalAlignment="Left" Height="27" Margin="87,24,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="182" Text="{Binding Nom}"/>
+        <Label Content="Nom:" HorizontalAlignment="Left" Margin="43,24,0,0" VerticalAlignment="Top" Foreground="White"/>
+        <TextBox HorizontalAlignment="Left" Height="25" Margin="87,24,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="182" Text="{Binding Nom}"/>
         <Button Content="{Binding BtnName}" HorizontalAlignment="Left" Margin="287,23,0,0" VerticalAlignment="Top" Width="109" Height="28" Command="{Binding BtnConnectCommand}" CommandParameter="{Binding Content, RelativeSource={RelativeSource self}}"/>
         <Button HorizontalAlignment="Left" Margin="413,24,0,0" VerticalAlignment="Top" Width="27" Height="27" Background="{Binding BtnColor}" IsTabStop="False"/>
         <ListBox Margin="0,74,158,69" ItemsSource="{Binding ChatList}"  HorizontalAlignment="Right" Width="281">
@@ -69,7 +69,7 @@
             </Label.RenderTransform>
         </Label>
         <Label Content="{Binding Carta3.valor}" HorizontalAlignment="Left" Margin="251,363,0,0" VerticalAlignment="Top" FontSize="130" Height="170" Foreground="{Binding Carta3.color}" BorderThickness="1" BorderBrush="Black" Background="#663E7A54"/>
-        <Label Content="{Binding Carta4.valor}" HorizontalAlignment="Left" Margin="350,374,0,0" VerticalAlignment="Top" FontSize="130" Height="170" Foreground="{Binding Carta4.color}" BorderThickness="1" BorderBrush="Black" Background="#663E7A54" RenderTransformOrigin="0.5,0.5">
+        <Label Content="{Binding Carta4.valor}" HorizontalAlignment="Left" Margin="350,374,0,0" VerticalAlignment="Top" FontSize="130" Height="170" Foreground="{Binding Carta4.color}" BorderThickness="1" BorderBrush="Black" Background="#663E7A54" RenderTransformOrigin="0.5,0.5" Padding="5" VerticalContentAlignment="Center">
             <Label.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -89,7 +89,9 @@
                 </TransformGroup>
             </Label.RenderTransform>
         </Label>
-        <Button Content="{Binding Carta.valor}" IsEnabled="{Binding isNotFull}" HorizontalAlignment="Left" Margin="209,90,0,0" VerticalAlignment="Top" Width="170" Height="252" Background="Transparent" BorderBrush="White" FontSize="200" Command="{Binding BtnGetCard}" Foreground="{Binding Carta.color}" Style="{DynamicResource ButtonStyle1}" />
+        <Button Content="{Binding Carta.valor}" IsEnabled="{Binding isNotFull}" HorizontalAlignment="Left" Margin="209,90,0,0" VerticalAlignment="Top" Width="170" Height="252" Background="Transparent" BorderBrush="Transparent" FontSize="200" Command="{Binding BtnGetCard}" Foreground="{Binding Carta.color}" Style="{DynamicResource ButtonStyle1}" />
         <Button Content="Start" Margin="0,0,891,474" Command="{Binding BtnStart}" IsEnabled="{Binding Enabled}" BorderBrush="{Binding BtnColor}" Height="26" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="100" Background="#FF74F966"/>
+        <TextBox HorizontalAlignment="Left" Height="26" Margin="685,23,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="210" Text="{Binding ServerUrl}"/>
+        <Label Content="Servidor:" HorizontalAlignment="Left" Margin="614,23,0,0" VerticalAlignment="Top" Foreground="White"/>
     </Grid>
 </Window>
